@@ -1,5 +1,5 @@
 /***************************************************************************
-    Copyright (C) 2003-2009 Robby Stephenson <robby@periapsis.org>
+    Copyright (C) 2012 Robby Stephenson <robby@periapsis.org>
  ***************************************************************************/
 
 /***************************************************************************
@@ -22,78 +22,66 @@
  *                                                                         *
  ***************************************************************************/
 
-#ifndef TELLICO_FETCH_H
-#define TELLICO_FETCH_H
+#ifndef TELLICO_DBLPFETCHER_H
+#define TELLICO_DBLPFETCHER_H
+
+#include "xmlfetcher.h"
+#include "configwidget.h"
+#include "../datavectors.h"
 
 namespace Tellico {
   namespace Fetch {
 
 /**
- * FetchFirst must be first, and the rest must follow consecutively in value.
- * FetchLast must be last!
+ * A fetcher for dblp.org
+ *
+ * @author Robby Stephenson
  */
-enum FetchKey {
-  FetchFirst = 0,
-  Title,
-  Person,
-  ISBN,
-  UPC,
-  Keyword,
-  DOI,
-  ArxivID,
-  PubmedID,
-  LCCN,
-  Raw,
-  ExecUpdate,
-  FetchLast
+class DBLPFetcher : public XMLFetcher {
+Q_OBJECT
+
+public:
+  /**
+   */
+  DBLPFetcher(QObject* parent);
+  /**
+   */
+  virtual ~DBLPFetcher();
+
+  /**
+   */
+  virtual QString source() const;
+  virtual bool canSearch(FetchKey k) const { return k == Keyword; }
+  virtual Type type() const { return DBLP; }
+  virtual bool canFetch(int type) const;
+  virtual void readConfigHook(const KConfigGroup& config);
+
+  /**
+   * Returns a widget for modifying the fetcher's config.
+   */
+  virtual Fetch::ConfigWidget* configWidget(QWidget* parent) const;
+
+
+  class ConfigWidget : public Fetch::ConfigWidget {
+  public:
+    explicit ConfigWidget(QWidget* parent_, const DBLPFetcher* fetcher = 0);
+    virtual void saveConfigHook(KConfigGroup&);
+    virtual QString preferredName() const;
+  };
+  friend class ConfigWidget;
+
+  static QString defaultName();
+  static QString defaultIcon();
+  static StringHash allOptionalFields();
+
+private:
+  virtual FetchRequest updateRequest(Data::EntryPtr entry);
+  virtual void resetSearch();
+  virtual KUrl searchUrl();
+  virtual void parseData(QByteArray& data);
+  virtual Data::EntryPtr fetchEntryHookData(Data::EntryPtr entry);
 };
 
-// real ones must start at 0!
-enum Type {
-  Unknown = -1,
-  Amazon = 0,
-  IMDB,
-  Z3950,
-  SRU,
-  Entrez,
-  ExecExternal,
-  Yahoo,
-  AnimeNfo,
-  IBS,
-  ISBNdb,
-  GCstarPlugin,
-  CrossRef,
-  Citebase,
-  Arxiv,
-  Bibsonomy,
-  GoogleScholar,
-  Discogs,
-  WineCom,
-  TheMovieDB,
-  MusicBrainz,
-  GiantBomb,
-  OpenLibrary,
-  Multiple,
-  Freebase,
-  DVDFr,
-  Filmaster,
-  Douban,
-  BiblioShare,
-  MovieMeter,
-  GoogleBook,
-  MAS,
-  Springer,
-  Allocine,
-  ScreenRush,
-  FilmStarts,
-  SensaCine,
-  Beyazperde,
-  HathiTrust,
-  TheGamesDB,
-  DBLP
-};
-
-  }
-}
-
+  } // end namespace
+} // end namespace
 #endif
