@@ -67,6 +67,7 @@
 #include "sensacinefetcher.h"
 #include "beyazperdefetcher.h"
 #include "thegamesdbfetcher.h"
+#include "dblpfetcher.h"
 
 /**
  * Ideally, I'd like these initializations to be in each cpp file for each collection type
@@ -120,4 +121,5 @@ Tellico::Fetch::FetcherInitializer::FetcherInitializer() {
   RegisterFetcher<Fetch::SensaCineFetcher> registerSensaCine(SensaCine);
   RegisterFetcher<Fetch::BeyazperdeFetcher> registerBeyazperde(Beyazperde);
   RegisterFetcher<Fetch::TheGamesDBFetcher> registerTheGamesDB(TheGamesDB);
+  RegisterFetcher<Fetch::DBLPFetcher> registerDBLP(DBLP);
 }
