@@ -1,3 +1,7 @@
+2012-11-03  Robby Stephenson  <robby@periapsis.org>
+
+	* Added fetcher for DBLP.org.
+
 2012-09-03  Robby Stephenson  <robby@periapsis.org>
 
 	* Updated Delicious Library importer.
